# irmin-effects-demo

./: .gitignore  dune-project  flake.nix  irmin_effects_demo.opam  irmin_effects_demo.opam.template
lib/: dune
test/: dune
